--- a/package.json
+++ b/package.json
@@ -8,34 +8,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "test": "truffle test",
     "compile": "truffle compile",
     "migrate": "truffle migrate",
     "measure": "node scripts/measure_performance.js",
     "deploy:ethereum": "node scripts/deploy_ethereum.js",
-    "deploy:polkadot": "node scripts/deploy_polkadot.js"
+    "deploy:polkadot": "node scripts/deploy_polkadot.js",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.0",
-    "@polkadot/api": "^10.3.1",
-    "@truffle/hdwallet-provider": "^2.1.1",
+    "@openzeppelin/contracts": "^4.9.3",
+    "@polkadot/api": "^10.9.1",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "@types/node": "^20.10.6",
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.2.45",
     "@types/web3": "^1.2.2",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
-    "axios": "^1.2.1",
+    "axios": "^1.6.2",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.1",
-    "csv-parse": "^5.3.3",
-    "dotenv": "^16.0.3",
-    "ethers": "^6.13.5",
+    "csv-parse": "^5.5.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
     "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
     "next": "14.0.4",
     "os-browserify": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "ts-node": "^10.9.2",
@@ -43,9 +45,12 @@
     "web3": "^4.16.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.1.4",
+    "chai": "^5.1.2",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "ganache-cli": "^6.12.2",
     "mocha": "^11.0.1",
-    "chai": "^5.1.2",
     "truffle": "^5.11.5"
   }
 }
