--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
     "axios": "^1.6.2",
-    "csv-parse": "^5.5.2",
-    "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
-    "moment": "^2.29.4",
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "web3": "^4.16.0",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.1",
+    "csv-parse": "^5.5.2",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.9.0",
     "https-browserify": "^1.0.0",
+    "moment": "^2.29.4",
+    "next": "14.0.4",
     "os-browserify": "^0.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "web3": "1.10.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
