--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "measure": "node scripts/measure_performance.js",
     "deploy:ethereum": "node scripts/deploy_ethereum.js",
     "deploy:polkadot": "node scripts/deploy_polkadot.js",
+    "deploy:tatum": "node scripts/deploy_ethereum.js",
+    "deploy:tatum:test": "truffle migrate --network tatum_testnet",
+    "verify": "node scripts/verify-contracts.js",
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
     "@polkadot/api": "^10.9.1",
-    "@truffle/hdwallet-provider": "^2.1.15",
+    "@truffle/hdwallet-provider": "2.1.15",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
-    "axios": "^1.6.2",
+    "axios": "1.6.0",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.1",
     "csv-parse": "^5.5.2",
@@ -37,7 +40,7 @@
     "react-dom": "18.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "web3": "1.10.0"
+    "web3": "1.9.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
